Update TypeScript configuration to include references for entities and shared interfaces in shared-domain library

--- a/apps/backend/libs/shared-domain/tsconfig.lib.json
+++ b/apps/backend/libs/shared-domain/tsconfig.lib.json
@@ -27,6 +27,9 @@
   ],
   "references": [
     {
+      "path": "../../entities/tsconfig.lib.json"
+    },
+    {
       "path": "../shared-interfaces/tsconfig.lib.json"
     },
     {
