--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -65,6 +65,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
+    "recharts": "^3.5.0",
     "signature-animation": "^1.2.1",
     "slate": "^0.118.1",
     "slate-history": "^0.113.1",
