--- a/apps/backend/apps/user-service/tsconfig.app.json
+++ b/apps/backend/apps/user-service/tsconfig.app.json
@@ -32,6 +32,9 @@
   ],
   "references": [
     {
+      "path": "../../entities/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
