--- a/apps/backend/apps/system-service/tsconfig.json
+++ b/apps/backend/apps/system-service/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/shared-client"
+    },
+    {
       "path": "../../libs/shared-enums"
     },
     {
