--- a/apps/backend/nx.json
+++ b/apps/backend/nx.json
@@ -66,7 +66,8 @@
         "patient-service-e2e/**/*",
         "apps/patient-service-e2e/**/*",
         "apps/imaging-service-e2e/**/*",
-        "apps/system-service-e2e/**/*"
+        "apps/system-service-e2e/**/*",
+        "apps/ws-gateway-e2e/**/*"
       ]
     },
     {
