--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -54,9 +54,12 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.9",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/express": "^4.17.23",
     "@types/moment": "^2.11.29",
     "@types/multer": "^2.0.0",
