--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -70,6 +70,7 @@
     "slate": "^0.118.1",
     "slate-history": "^0.113.1",
     "slate-react": "^0.119.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
