[MODIFY] - add test file for some entities in user-service and system service (missing remove ai-analysis api )

--- a/apps/backend/apps/system-service-e2e/tsconfig.json
+++ b/apps/backend/apps/system-service-e2e/tsconfig.json
@@ -7,5 +7,15 @@
     "noImplicitAny": false
   },
   "include": ["jest.config.ts", "src/**/*.ts"],
-  "references": []
+  "references": [
+    {
+      "path": "../../libs/database"
+    },
+    {
+      "path": "../../libs/shared-enums"
+    },
+    {
+      "path": "../../libs/shared-domain"
+    }
+  ]
 }
