--- a/apps/backend/apps/user-service-e2e/tsconfig.json
+++ b/apps/backend/apps/user-service-e2e/tsconfig.json
@@ -7,5 +7,12 @@
     "noImplicitAny": false
   },
   "include": ["jest.config.ts", "src/**/*.ts"],
-  "references": []
+  "references": [
+    {
+      "path": "../../libs/shared-enums"
+    },
+    {
+      "path": "../../libs/shared-domain"
+    }
+  ]
 }
