[MODIFY] - enhance validation for approve study signatures, refactor delete function api and fix error display error message although api delete/create is success for pages in admin , and display data on table

--- a/apps/backend/apps/user-service/tsconfig.app.json
+++ b/apps/backend/apps/user-service/tsconfig.app.json
@@ -35,6 +35,9 @@
       "path": "../../entities/tsconfig.lib.json"
     },
     {
+      "path": "../../libs/shared-client/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/redis/tsconfig.lib.json"
     },
     {
