--- a/apps/backend/apps/user-service/tsconfig.json
+++ b/apps/backend/apps/user-service/tsconfig.json
@@ -7,6 +7,9 @@
       "path": "../../entities"
     },
     {
+      "path": "../../libs/shared-client"
+    },
+    {
       "path": "../../libs/redis"
     },
     {
