--- a/apps/backend/apps/api-gateway/tsconfig.json
+++ b/apps/backend/apps/api-gateway/tsconfig.json
@@ -4,25 +4,28 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/shared-interfaces"
-    },
-    {
-      "path": "../../libs/shared-client"
-    },
-    {
       "path": "../../libs/database"
     },
     {
-      "path": "../../libs/shared-interceptor"
+      "path": "../../libs/shared-interfaces"
+    },
+    {
+      "path": "../../libs/redis"
     },
     {
       "path": "../../libs/shared-domain"
+    },
+    {
+      "path": "../../libs/shared-interceptor"
     },
     {
       "path": "../../libs/shared-utils"
     },
     {
       "path": "../../libs/shared-guards"
+    },
+    {
+      "path": "../../libs/shared-client"
     },
     {
       "path": "../../libs/shared-decorators"
