fix, expose socket port in docker

--- a/apps/backend/apps/ws-gateway/Dockerfile
+++ b/apps/backend/apps/ws-gateway/Dockerfile
@@ -22,5 +22,8 @@ RUN npm ci --omit=dev
 # copy compiled service from Nx dist folder
 COPY --from=builder /workspace/apps/ws-gateway/dist ./
 
+# Expose both ports: WebSocket port (3006) and HTTP port (5006 if needed)
+EXPOSE 3006
 EXPOSE 5006
+
 CMD ["node", "main.js"]
