--- a/apps/backend/apps/ws-gateway/Dockerfile
+++ b/apps/backend/apps/ws-gateway/Dockerfile
@@ -9,7 +9,7 @@ COPY libs ./libs
 COPY entities ./entities
 
 RUN npm ci
-RUN npx nx build ws-gateway
+RUN npx nx build ws-gateway  --configuration=production
 
 # Stage 2 – runtime image
 FROM node:20-alpine
