Update Docker configurations and enhance service health checks
- Changed the environment file reference in docker-compose.yml to use .env.docker.
- Added synchronization command in Dockerfiles for all services to ensure consistent builds.
- Improved health check endpoints in AppController for user, system, and websocket services.
- Enhanced error handling and logging during service startup in main.ts files for better debugging.
- Updated health check responses to include detailed service status information.

--- a/apps/backend/apps/patient-service/Dockerfile
+++ b/apps/backend/apps/patient-service/Dockerfile
@@ -9,6 +9,7 @@ COPY libs ./libs
 COPY entities ./entities
 
 RUN npm ci
+RUN npx nx sync
 RUN npx nx build patient-service
 
 # Stage 2 – runtime image
