--- a/apps/backend/docker-compose.yml
+++ b/apps/backend/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "5000:5000"
     env_file:
-      - apps/api-gateway/.env
+      - apps/api-gateway/.env.docker
     depends_on:
       - user-service
       - patient-service
