--- a/apps/backend/apps/api-gateway/fly.api-gateway.toml
+++ b/apps/backend/apps/api-gateway/fly.api-gateway.toml
@@ -12,8 +12,18 @@ primary_region = "sin"
   internal_port = 5000
   protocol = "tcp"
 
+  [services.concurrency]
+    type = "connections"
+    soft_limit = 25
+    hard_limit = 50
+
   [[services.ports]]
     port = 80
+    handlers = ["http"]
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
 
   [[services.tcp_checks]]
     interval = "15s"
