--- a/apps/backend/apps/patient-service/fly.patient-service.toml
+++ b/apps/backend/apps/patient-service/fly.patient-service.toml
@@ -1,5 +1,4 @@
 app = "patient-service-anhminh"
-
 primary_region = "sin"
 
 [build]
@@ -11,10 +10,20 @@ primary_region = "sin"
 [[services]]
   internal_port = 5004
   protocol = "tcp"
+  auto_stop_machines = "suspend"
+  auto_start_machines = true
+  min_machines_running = 0
 
   [[services.ports]]
-    port = 80
+    port = 5004
+    handlers = []
+
+  [services.concurrency]
+    type = "connections"
+    soft_limit = 25
+    hard_limit = 50
 
   [[services.tcp_checks]]
     interval = "15s"
     timeout = "2s"
+    grace_period = "10s"
