--- a/apps/backend/apps/ws-gateway/fly.ws-gateway.toml
+++ b/apps/backend/apps/ws-gateway/fly.ws-gateway.toml
@@ -1,21 +1,25 @@
-app = "user-service-anhminh"
+app = "ws-gateway-anhminh"
 primary_region = "sin"
 
 [build]
-  image = "anhminh123/user-service:latest"
+  image = "anhminh123/ws-gateway:latest"
 
 [env]
-  PORT = "5002"
+  PORT = "3006"
 
 [[services]]
-  internal_port = 5002
+  internal_port = 3006
   protocol = "tcp"
   auto_stop_machines = "suspend"
   auto_start_machines = true
   min_machines_running = 0
 
   [[services.ports]]
-    port = 5002
+    port = 3006
+    handlers = []
+
+  [[services.ports]]
+    port = 5006   
     handlers = []
 
   [services.concurrency]
