--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -52,6 +52,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dcmjs": "^0.45.0",
     "dicom-parser": "^1.8.21",
     "dicomweb-client": "^0.11.2",
