[MODIFY] - add ai-analysis page and view detail. add field and interface for feedback and origin_image_url,  and change validation for physician sign

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -95,6 +95,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/robust-point-in-polygon": "^1.0.4",
     "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9",
     "eslint-config-next": "^15.5.7",
