--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -58,6 +58,7 @@
     "dcmjs": "^0.45.0",
     "dicom-parser": "^1.8.21",
     "dicomweb-client": "^0.11.2",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "html2pdf.js": "^0.12.1",
     "js-cookie": "^3.0.5",
@@ -92,6 +93,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash.merge": "^4.6.9",
     "@types/node": "^20",
