--- a/apps/backend/apps/user-service-e2e/tsconfig.json
+++ b/apps/backend/apps/user-service-e2e/tsconfig.json
@@ -1,18 +1,17 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "out-tsc/@backend/user-service-e2e",
-    "esModuleInterop": true,
-    "noUnusedLocals": false,
-    "noImplicitAny": false
-  },
-  "include": ["jest.config.ts", "src/**/*.ts"],
-  "references": [
-    {
-      "path": "../../libs/shared-enums"
-    },
-    {
-      "path": "../../libs/shared-domain"
+    "target": "ES2021",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "baseUrl": ".",
+    "paths": {
+      "@user-service/*": ["../user-service/src/*"],
+      "@backend/database": ["../../libs/database/src/index.ts"],
+      "@backend/shared-domain": ["../../libs/shared-domain/src/index.ts"],
+      "@backend/shared-enums": ["../../libs/shared-enums/src/index.ts"],
+      "@backend/shared-exception": ["../../libs/shared-exception/src/index.ts"],
+      "@backend/shared-utils": ["../../libs/shared-utils/src/index.ts"]
     }
-  ]
+  }
 }
