minor fix auth slice, may be fix dockerfile

--- a/apps/backend/apps/user-service-e2e/tsconfig.json
+++ b/apps/backend/apps/user-service-e2e/tsconfig.json
@@ -13,5 +13,13 @@
       "@backend/shared-exception": ["../../libs/shared-exception/src/index.ts"],
       "@backend/shared-utils": ["../../libs/shared-utils/src/index.ts"]
     }
-  }
+  },
+  "references": [
+    {
+      "path": "../../libs/shared-enums"
+    },
+    {
+      "path": "../../libs/shared-domain"
+    }
+  ]
 }
