--- a/apps/backend/apps/ws-gateway/Dockerfile
+++ b/apps/backend/apps/ws-gateway/Dockerfile
@@ -8,6 +8,10 @@ COPY apps ./apps
 COPY libs ./libs
 
 RUN npm ci
+
+# sync root files (like .env) if any changes, not fail when errors
+RUN npx nx sync || true
+
 RUN npx nx build ws-gateway  --configuration=production
 
 # Stage 2 – runtime image
@@ -20,6 +24,10 @@ ENV NODE_ENV=production
 # install runtime deps (root package.json is enough)
 COPY package*.json ./
 RUN npm ci --omit=dev
+
+
+# sync root files (like .env) if any changes, not fail when errors
+RUN npx nx sync || true
 
 # copy compiled service from Nx dist folder
 COPY --from=builder /workspace/apps/ws-gateway/dist ./
